ViewModel use Dependence Injection Manual.

--- a/AppEstudo/.gitignore
+++ b/AppEstudo/.gitignore
@@ -58,28 +58,8 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 .cxx/
+.DS_Store
 
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
 
-# Freeline
-freeline.py
-freeline/
-freeline_project_description.json
-
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
-
-# Version control
-vcs.xml
-
-# lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-# lint/reports/
